--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </table>
 </div>
 <br>
-<button id="shuffle">Donuts! (3)</button><button id="checker">Submit</button><button id="restart">Restart</button>
+<button id="shuffle">Donuts! (<span id="shuffles-left">3</span>)</button><button id="submit">Submit</button><button id="restart">Restart</button>
 <br>
 </div>
 </center>	
